@@ -1,4 +1,4 @@
-AC_INIT(fuse, 2.3.1-pre1)
+AC_INIT(fuse, 2.4.0-pre0)
 AM_INIT_AUTOMAKE
 AM_CONFIG_HEADER(include/config.h)
 
