@@ -15,6 +15,9 @@
 
 	* Add ACCESS operation.  This is called from the access() system
 	call if 'default_permissions' mount option is not given
+
+	* Perform ACCESS operation in case of open(), if the file wasn't
+	newly created
  
 2005-07-28  Miklos Szeredi <miklos@szeredi.hu>
 
